<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.collegeapplication.MainActivity" >
   
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text" />

    <TextView
        android:id="@+id/viewRegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/view_text" />

    <Button
        android:id="@+id/viewRegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewRegText"
        android:layout_below="@+id/viewRegText"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/view_button" />

    <TextView
        android:id="@+id/newRegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewRegText"
        android:layout_below="@+id/viewRegButton"
        android:layout_marginTop="22dp"
        android:text="@string/add_text" />

    <Button
        android:id="@+id/newRegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewRegButton"
        android:layout_below="@+id/newRegText"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:text="@string/add_button" />


</RelativeLayout>